# srt2docx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  source-me  srt2docx  srt2docx.py  srt2docx_funcs.py  srt2docx_settings_example.yaml
